# ToDoList

./: .env  .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: main.py  run_api.py
app/api/: app.py
app/api/v1/: __init__.py
app/api/v1/routes/: __init__.py  projects.py  tasks.py
app/api/v1/schemas/: __init__.py  project.py  task.py
app/cli/: __init__.py  console.py
app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
app/db/: __init__.py  session.py
app/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
app/models/: project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/services/: __init__.py  project_service.py  task_service.py
src/cli/: main.py
src/core/entities/: Task.py  project.py  task.py
src/core/services/: ProjectService.py  TaskService.py  project_service.py  task_service.py
src/data/: in_memory_db.py
