[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "A simple ToDoList manager built with Python OOP."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
todolist = "src.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"